--- a/PlantsWpf/PlantsAreaWindow.xaml
+++ b/PlantsWpf/PlantsAreaWindow.xaml
@@ -1,45 +1,49 @@
 ﻿<Window x:Class="PlantsWpf.PlantsAreaWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="SecondWindow" Height="260" Width="366">
-    <Grid x:Name="RootGrid" Margin="0,0,-4,-3">
+        Title="SecondWindow" Height="268" Width="332">
+    <Grid x:Name="RootGrid" Margin="0,0,62,-2">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="14*"/>
-            <ColumnDefinition Width="59*"/>
+            <ColumnDefinition Width="27*"/>
+            <ColumnDefinition Width="55*"/>
         </Grid.ColumnDefinitions>
-        <TextBox Text="20" Name="OptimalTemperature" HorizontalAlignment="Left" Height="23" Margin="29,77,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="63" Grid.Column="1" />
-        <TextBox Text="60" Name="OptimalHumidity" HorizontalAlignment="Left" Height="23" Margin="29,102,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="63" Grid.Column="1"/>
-        <TextBox Text="7" Name="OptimalSoilPh" HorizontalAlignment="Left" Height="23" Margin="29,128,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="63" Grid.Column="1"/>
-        <TextBox Text="14"  Name="OptimalNutrient" HorizontalAlignment="Left" Height="23" Margin="29,153,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="63" Grid.Column="1"/>
-        <ComboBox Name="PlantNameBox" HorizontalAlignment="Left" Margin="9,30,0,0" VerticalAlignment="Top" Width="56" Height="22" Grid.Column="1"/>
-        <Label Content="Temperature" HorizontalAlignment="Left" Margin="6,77,0,0" VerticalAlignment="Top" Width="81" Grid.ColumnSpan="2" Height="26"/>
-        <Label Content="Nutrient" HorizontalAlignment="Left" Margin="6,152,0,0" VerticalAlignment="Top" Width="81" Grid.ColumnSpan="2" Height="24"/>
-        <Label Content="SoilPh" HorizontalAlignment="Left" Margin="8,128,0,0" VerticalAlignment="Top" Width="81" Grid.ColumnSpan="2" Height="26"/>
-        <Label Content="Humidity" HorizontalAlignment="Left" Margin="6,102,0,0" VerticalAlignment="Top" Width="81" Grid.ColumnSpan="2" Height="26"/>
-        <TextBox Text="10" Name="MinTemperature" HorizontalAlignment="Left" Height="23" Margin="94,77,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="63" Grid.Column="1"/>
-        <TextBox Text="50" Name="MinHumidity" HorizontalAlignment="Left" Height="23" Margin="94,102,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="63" Grid.Column="1"/>
-        <TextBox Text="5" Name="MinSoilPh" HorizontalAlignment="Left" Height="23" Margin="94,128,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="63" Grid.Column="1" />
-        <TextBox Text="9" Name="MinNutrient" HorizontalAlignment="Left" Height="23" Margin="94,153,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="63" Grid.Column="1"/>
-        <TextBox Text="30" Name="MaxTemperature" HorizontalAlignment="Left" Height="23" Margin="159,77,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="63" Grid.Column="1"/>
-        <TextBox Text="70" Name="MaxHumidity" HorizontalAlignment="Left" Height="23" Margin="159,102,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="63" Grid.Column="1"/>
-        <TextBox Text="9" Name="MaxSoilPh" HorizontalAlignment="Left" Height="23" Margin="159,128,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="63" Grid.Column="1"/>
-        <TextBox Text="100"  Name="MaxNutrient" HorizontalAlignment="Left" Height="23" Margin="159,153,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="63" Grid.Column="1"/>
-        <Label Content="Optimal" Grid.Column="1" HorizontalAlignment="Left" Margin="36,52,0,0" VerticalAlignment="Top" Height="26" Width="52"/>
-        <Label Content="Min" Grid.Column="1" HorizontalAlignment="Left" Margin="107,51,0,0" VerticalAlignment="Top" RenderTransformOrigin="1.693,0.474" Height="26" Width="30"/>
-        <Label Content="Max" Grid.Column="1" HorizontalAlignment="Left" Margin="170,51,0,0" VerticalAlignment="Top" Height="26" Width="32"/>
-        <Label Content="Growing time" HorizontalAlignment="Left" Margin="154,28,0,0" VerticalAlignment="Top" Width="83" Height="26" Grid.Column="1"/>
-        <TextBox Name="GrowingTime" Text="1000" HorizontalAlignment="Left" Height="23" Margin="236,30,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="39" Grid.Column="1"/>
+        <TextBox Text="20" Name="OptimalTemperature" HorizontalAlignment="Left" Height="23" Margin="3,93,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="39" Grid.Column="1" />
+        <TextBox Text="60" Name="OptimalHumidity" HorizontalAlignment="Left" Height="23" Margin="3,118,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="39" Grid.Column="1"/>
+        <TextBox Text="7" Name="OptimalSoilPh" HorizontalAlignment="Left" Height="23" Margin="3,144,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="39" Grid.Column="1"/>
+        <TextBox Text="14"  Name="OptimalNutrient" HorizontalAlignment="Left" Height="23" Margin="3,169,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="39" Grid.Column="1"/>
+        <ComboBox Name="PlantNameBox" HorizontalAlignment="Left" Margin="3,24,0,0" VerticalAlignment="Top" Width="95" Height="22" Grid.Column="1"/>
+        <Label Content="Temperature" HorizontalAlignment="Left" Margin="1,93,0,0" VerticalAlignment="Top" Width="81" Height="26" Grid.ColumnSpan="2"/>
+        <Label Content="Nutrient" HorizontalAlignment="Left" Margin="1,168,0,0" VerticalAlignment="Top" Width="81" Height="24" Grid.ColumnSpan="2"/>
+        <Label Content="SoilPh" HorizontalAlignment="Left" Margin="3,144,0,0" VerticalAlignment="Top" Width="81" Height="26" Grid.ColumnSpan="2"/>
+        <Label Content="Humidity" HorizontalAlignment="Left" Margin="1,118,0,0" VerticalAlignment="Top" Width="81" Height="26" Grid.ColumnSpan="2"/>
+        <TextBox Text="10" Name="MinTemperature" HorizontalAlignment="Left" Height="23" Margin="43,93,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="40" Grid.Column="1"/>
+        <TextBox Text="50" Name="MinHumidity" HorizontalAlignment="Left" Height="23" Margin="43,118,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="40" Grid.Column="1"/>
+        <TextBox Text="5" Name="MinSoilPh" HorizontalAlignment="Left" Height="23" Margin="43,144,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="40" Grid.Column="1" />
+        <TextBox Text="9" Name="MinNutrient" HorizontalAlignment="Left" Height="23" Margin="43,169,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="40" Grid.Column="1"/>
+        <TextBox Text="30" Name="MaxTemperature" HorizontalAlignment="Left" Height="23" Margin="84,93,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="39" Grid.Column="1"/>
+        <TextBox Text="70" Name="MaxHumidity" HorizontalAlignment="Left" Height="23" Margin="84,118,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="39" Grid.Column="1"/>
+        <TextBox Text="9" Name="MaxSoilPh" HorizontalAlignment="Left" Height="23" Margin="84,144,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="39" Grid.Column="1"/>
+        <TextBox Text="100"  Name="MaxNutrient" HorizontalAlignment="Left" Height="23" Margin="84,169,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="39" Grid.Column="1"/>
+        <Label Content="Optimal" HorizontalAlignment="Left" Margin="1,68,0,0" VerticalAlignment="Top" Height="26" Width="52" Grid.Column="1"/>
+        <Label Content="Min" Grid.Column="1" HorizontalAlignment="Left" Margin="49,68,0,0" VerticalAlignment="Top" RenderTransformOrigin="1.693,0.474" Height="26" Width="30"/>
+        <Label Content="Max" Grid.Column="1" HorizontalAlignment="Left" Margin="84,68,0,0" VerticalAlignment="Top" Height="26" Width="32"/>
+        <Label Content="Growing time" HorizontalAlignment="Left" Margin="3,45,0,0" VerticalAlignment="Top" Width="83" Height="26" Grid.ColumnSpan="2"/>
+        <TextBox Name="GrowingTime" Text="1000" HorizontalAlignment="Left" Height="23" Margin="4,48,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="39" Grid.Column="1"/>
         <Label Content="Add new plants area" Grid.Column="1" HorizontalAlignment="Left" Margin="31,-1,0,0" VerticalAlignment="Top" Height="26" Width="118"/>
-        <Label Content="Number" HorizontalAlignment="Left" Margin="69,28,0,0" VerticalAlignment="Top" Width="56" Height="26" Grid.Column="1" RenderTransformOrigin="0.976,0.577"/>
-        <TextBox Name="Number" Text="10" HorizontalAlignment="Left" Height="23" Margin="124,30,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="30" Grid.Column="1"/>
-        <Label Name="PlantName" Content="Plant name" HorizontalAlignment="Left" Margin="7,26,0,0" VerticalAlignment="Top" Width="70" Height="26" RenderTransformOrigin="0.976,0.577" Grid.ColumnSpan="2"/>
-        <Border BorderBrush="Black" BorderThickness="1" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="7,57,0,0" Width="343" Height="124" VerticalAlignment="Top" />
-        <Button Name="Save" Content="Save" Click="Save_OnClick" HorizontalAlignment="Left" Height="29" Margin="5,188,0,0" VerticalAlignment="Top" Width="64" Grid.ColumnSpan="2"/>
-        <Button Name="ClearAll" Content="Clear all" Click="ClearAll_OnClick" HorizontalAlignment="Left" Height="29" Margin="7,188,0,0" VerticalAlignment="Top" Width="64" Grid.Column="1"/>
-        <Label Content="Sensor" Grid.Column="1" HorizontalAlignment="Left" Margin="228,52,0,0" VerticalAlignment="Top" RenderTransformOrigin="1.737,-8.769"/>
-        <CheckBox IsChecked="True" Name="TemperatureCheckBox" Grid.Column="1" HorizontalAlignment="Left" Margin="243,80,0,0" VerticalAlignment="Top"/>
-        <CheckBox IsChecked="True" Name="HumidityCheckBox" Grid.Column="1" HorizontalAlignment="Left" Margin="243,106,0,0" VerticalAlignment="Top"/>
-        <CheckBox IsChecked="True" Name="SoilPhCheckBox" Grid.Column="1" HorizontalAlignment="Left" Margin="243,132,0,0" VerticalAlignment="Top"/>
-        <CheckBox IsChecked="True" Name="NutrientCheckBox" Grid.Column="1" HorizontalAlignment="Left" Margin="243,157,0,0" VerticalAlignment="Top"/>
+        <Label Content="Number" HorizontalAlignment="Left" Margin="101,22,0,0" VerticalAlignment="Top" Width="56" Height="26" RenderTransformOrigin="0.976,0.577" Grid.Column="1"/>
+        <TextBox Name="Number" Text="10" HorizontalAlignment="Left" Height="23" Margin="156,24,-20,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="30" Grid.Column="1"/>
+        <Label Name="PlantName" Content="Plant name" HorizontalAlignment="Left" Margin="4,20,0,0" VerticalAlignment="Top" Width="70" Height="26" RenderTransformOrigin="0.976,0.577"/>
+        <Button Name="Save" Content="Save" Click="Save_OnClick" HorizontalAlignment="Left" Height="29" Margin="3,195,0,0" VerticalAlignment="Top" Width="64"/>
+        <Button Name="ClearAll" Content="Clear all" Click="ClearAll_OnClick" HorizontalAlignment="Left" Height="29" Margin="70,195,0,0" VerticalAlignment="Top" Width="64" Grid.ColumnSpan="2"/>
+        <Label Content="Sensor" Grid.Column="1" HorizontalAlignment="Left" Margin="128,69,-9,0" VerticalAlignment="Top" RenderTransformOrigin="1.737,-8.769" Height="26" Width="46"/>
+        <CheckBox IsChecked="True" Name="TemperatureCheckBox" Grid.Column="1" HorizontalAlignment="Left" Margin="143,97,0,0" VerticalAlignment="Top" Height="13" Width="13"/>
+        <CheckBox IsChecked="True" Name="HumidityCheckBox" Grid.Column="1" HorizontalAlignment="Left" Margin="143,123,0,0" VerticalAlignment="Top" Height="13" Width="13"/>
+        <CheckBox IsChecked="True" Name="SoilPhCheckBox" Grid.Column="1" HorizontalAlignment="Left" Margin="143,149,0,0" VerticalAlignment="Top" Height="13" Width="13"/>
+        <CheckBox IsChecked="True" Name="NutrientCheckBox" Grid.Column="1" HorizontalAlignment="Left" Margin="143,174,0,0" VerticalAlignment="Top" Height="13" Width="13"/>
+        <Label Content="Timeout" Grid.Column="1" HorizontalAlignment="Left" Margin="169,70,-58,0" VerticalAlignment="Top" Height="26" Width="54"/>
+        <TextBox Grid.Column="1" Name="TemperatureTimeout" HorizontalAlignment="Left" Height="23" Margin="184,91,-48,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="29" Text="1&#x9;1`"/>
+        <TextBox Grid.Column="1" Name="HumidityTimeout" HorizontalAlignment="Left" Height="23" Margin="183,117,-47,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="29" Text="2"/>
+        <TextBox Grid.Column="1" Name="SoilPhTimeout" HorizontalAlignment="Left" Height="23" Margin="183,143,-47,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="29" Text="3"/>
+        <TextBox Grid.Column="1" Name="NutrientTimeout" HorizontalAlignment="Left" Height="23" Margin="183,169,-47,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="29" Text="4"/>
     </Grid>
 </Window>
