--- a/PlantsWpf/MainWindow.xaml
+++ b/PlantsWpf/MainWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="350" Width="525">
     <Grid x:Name="RootGrid">
-        <DockPanel HorizontalAlignment="Left" Height="56" LastChildFill="False" Margin="1,5,0,0" VerticalAlignment="Top" Width="359">
+        <DockPanel HorizontalAlignment="Left" Height="46" LastChildFill="False" Margin="1,5,0,0" VerticalAlignment="Top" Width="359">
             <Button Name="Load" Content="Load" HorizontalAlignment="Left" Margin="10,8,0,0"
                 VerticalAlignment="Top" Width="49" Height="26" Click="Load_OnClick" />
 
@@ -13,10 +13,9 @@
             <Button Content="Pause" Name="Pause" HorizontalAlignment="Left" Height="27" Margin="10,9,0,0"
                     VerticalAlignment="Top" Width="56" Click="Pause_OnClick"/>
 
-            <ComboBox Name="WeatherBox"  Margin="10,25,0,0" HorizontalAlignment="Left"
-                Width="61" Height="22" VerticalAlignment="Top"/>
-            <Label Content="Weather" HorizontalAlignment="Left" Margin="-58,0,0,0"  VerticalAlignment="Top" Height="28" Width="56"/>
-            <Button Name="AddArea" Content="+ Area" Click="AddArea_OnClick" HorizontalAlignment="Left" Margin="10,9,0,0" VerticalAlignment="Top" Width="66" Height="28"/>
+            <ComboBox Name="WeatherBox"  Margin="10,10,0,0" HorizontalAlignment="Left"
+                Width="61" Height="27" VerticalAlignment="Top"/>
+            <Button Name="AddArea" Content="Add area" Click="AddArea_OnClick" HorizontalAlignment="Left" Margin="10,9,0,0" VerticalAlignment="Top" Width="66" Height="28"/>
         </DockPanel>
         <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" Margin="0,65,0,-1">
             <!--<Canvas HorizontalAlignment="Left" VerticalAlignment="Top" Width="518" Height="254" RenderTransformOrigin="0.102,0.197">-->
