--- a/PlantsWpf/MainWindow.xaml
+++ b/PlantsWpf/MainWindow.xaml
@@ -3,9 +3,9 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="350" Width="525">
     <Grid x:Name="RootGrid">
-        <DockPanel HorizontalAlignment="Left" Height="46" LastChildFill="False" Margin="1,5,0,0" VerticalAlignment="Top" Width="359">
-            <Button Name="Load" Content="Load" HorizontalAlignment="Left" Margin="10,8,0,0"
-                VerticalAlignment="Top" Width="49" Height="26" Click="Load_OnClick" />
+        <DockPanel HorizontalAlignment="Left" Height="46" LastChildFill="False" Margin="1,5,0,0" VerticalAlignment="Top" Width="282">
+            <!--<Button Name="Load" Content="Load" HorizontalAlignment="Left" Margin="10,8,0,0"
+                VerticalAlignment="Top" Width="49" Height="26" Click="Load_OnClick" />-->
 
             <Button Name="Start" Content="Start" HorizontalAlignment="Left" Margin="10,9,0,0"
                 VerticalAlignment="Top" Width="54" Height="26" Click="Start_OnClick" />
