--- a/PlantsWpf/PlantsAreaWindow.xaml
+++ b/PlantsWpf/PlantsAreaWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="PlantsWpf.PlantsAreaWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="SecondWindow" Height="268" Width="332">
+        Title="SecondWindow" Height="268" Width="332" Background="LightGoldenrodYellow">
     <Grid x:Name="RootGrid" Margin="0,0,62,-2">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="27*"/>
@@ -29,9 +29,9 @@
         <Label Content="Max" Grid.Column="1" HorizontalAlignment="Left" Margin="84,68,0,0" VerticalAlignment="Top" Height="26" Width="32"/>
         <Label Content="Growing time" HorizontalAlignment="Left" Margin="3,45,0,0" VerticalAlignment="Top" Width="83" Height="26" Grid.ColumnSpan="2"/>
         <TextBox Name="GrowingTime" Text="1000" HorizontalAlignment="Left" Height="23" Margin="4,48,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="39" Grid.Column="1"/>
-        <Label Content="Add new plants area" Grid.Column="1" HorizontalAlignment="Left" Margin="31,-1,0,0" VerticalAlignment="Top" Height="26" Width="118"/>
+        <Label Content="Add new plants area" FontStyle="Normal" FontSize="15"  Grid.Column="1" HorizontalAlignment="Left" Margin="5,-3,0,0" VerticalAlignment="Top" Height="28" Width="156"/>
         <Label Content="Number" HorizontalAlignment="Left" Margin="101,22,0,0" VerticalAlignment="Top" Width="56" Height="26" RenderTransformOrigin="0.976,0.577" Grid.Column="1"/>
-        <TextBox Name="Number" Text="10" HorizontalAlignment="Left" Height="23" Margin="156,24,-20,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="30" Grid.Column="1"/>
+        <TextBox Name="Number" Text="10" HorizontalAlignment="Left" Height="23" Margin="156,24,-37,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="57" Grid.Column="1"/>
         <Label Name="PlantName" Content="Plant name" HorizontalAlignment="Left" Margin="4,20,0,0" VerticalAlignment="Top" Width="70" Height="26" RenderTransformOrigin="0.976,0.577"/>
         <Button Name="Save" Content="Save" Click="Save_OnClick" HorizontalAlignment="Left" Height="29" Margin="3,195,0,0" VerticalAlignment="Top" Width="64"/>
         <Button Name="ClearAll" Content="Clear all" Click="ClearAll_OnClick" HorizontalAlignment="Left" Height="29" Margin="70,195,0,0" VerticalAlignment="Top" Width="64" Grid.ColumnSpan="2"/>
