--- a/PlantsWpf/MainWindow.xaml
+++ b/PlantsWpf/MainWindow.xaml
@@ -1,10 +1,11 @@
 ﻿<Window x:Class="PlantsWpf.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:dv="clr-namespace:System.Windows.Controls.DataVisualization;assembly=System.Windows.Controls.DataVisualization.Toolkit"
+        xmlns:dvc="clr-namespace:System.Windows.Controls.DataVisualization.Charting;assembly=System.Windows.Controls.DataVisualization.Toolkit"
         Title="MainWindow" Height="350" Width="525">
-    <Grid x:Name="RootGrid">
-        
-            <DockPanel HorizontalAlignment="Left" Height="46" LastChildFill="False" Margin="1,5,0,0" VerticalAlignment="Top" Width="282">
+    <Grid x:Name="RootGrid" Margin="-1,0,1,0">
+        <DockPanel HorizontalAlignment="Left" Height="46" LastChildFill="False" Margin="1,5,0,0" VerticalAlignment="Top" Width="282">
             <!--<Button Name="Load" Content="Load" HorizontalAlignment="Left" Margin="10,8,0,0"
                 VerticalAlignment="Top" Width="49" Height="26" Click="Load_OnClick" />-->
 
