--- a/PlantsWpf/MainWindow.xaml
+++ b/PlantsWpf/MainWindow.xaml
@@ -2,10 +2,14 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Sensors system" Height="365" Width="525">
-            
-       
+
+
     <Grid x:Name="RootGrid" Margin="-1,0,1,0">
-        <DockPanel HorizontalAlignment="Left" Height="46" LastChildFill="False" Margin="1,5,0,0" VerticalAlignment="Top" Width="282">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="425*"/>
+            <ColumnDefinition Width="92*"/>
+        </Grid.ColumnDefinitions>
+        <DockPanel HorizontalAlignment="Left" Height="46" LastChildFill="False" Margin="1,5,0,0" VerticalAlignment="Top" Width="157">
 
             <Button Name="Start" Content="Start" IsEnabled="False" Visibility="Collapsed" HorizontalAlignment="Left" Margin="10,9,0,0"
                 VerticalAlignment="Top" Width="54" Height="26" Click="Start_OnClick" />
@@ -18,10 +22,38 @@
             <Button Name="AddArea" Content="Add area" Click="AddArea_OnClick" HorizontalAlignment="Left" Margin="10,9,0,0" VerticalAlignment="Top" Width="66" Height="28"/>
         </DockPanel>
 
-        <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" Margin="0,79.001,0,-15.001">
-            <Grid x:Name="PlantsGrid"></Grid>
-
+        <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" Margin="0,51,0,-15" Grid.ColumnSpan="2"
+                      Grid.Column="0">
+            <Grid x:Name="PlantsGrid">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="257*"/>
+                    <ColumnDefinition Width="260*"/>
+                </Grid.ColumnDefinitions>
+            </Grid>
         </ScrollViewer>
+
+        <Canvas Grid.Column="0" Panel.ZIndex="99" Margin="0,0,0,283">
+            <Expander Header="Log in before you start" Height="26" Canvas.Left="150" Canvas.Top="15" Width="275">
+                <Canvas Panel.ZIndex="99" Background="Beige" Height="198" Margin="0,0,-14,0">
+                    <Canvas.Effect>
+                        <DropShadowEffect/>
+                    </Canvas.Effect>
+                    <Label Height="30" Canvas.Top="19" Content="FirstName" Canvas.Left="12"/>
+                    <Label Height="30" Canvas.Top="52" Canvas.Left="11" Content="LastName" RenderTransformOrigin="0.8,0.433"/>
+                    <Label Name="EmailLabel" Height="30" Canvas.Top="82" Canvas.Left="11" Visibility="Collapsed" Content="Email"/>
+                    <Label Height="30" Canvas.Top="112" Content="Password" RenderTransformOrigin="0.45,1.867" Canvas.Left="9"/>
+                    <Label Name="ConfirmPasswordLabel"  Height="30" Canvas.Top="145" Visibility="Collapsed" Content="Confirm Password" Canvas.Left="8"/>
+                    <TextBox Name="FirstName" Text="Alex" Background="White" Height="29" Canvas.Left="114" Width="165" Canvas.Top="20"/>
+                    <TextBox Name="LastName" Text="Gal" Background="White" Height="29" Canvas.Left="114" Canvas.Top="51" Width="165"/>
+                    <TextBox Name="Email" Visibility="Collapsed" Background="White" Height="29" Canvas.Left="114" Canvas.Top="82" Width="165"/>
+                    <PasswordBox Name="Password" Password="qYYfO8Di" Background="White" Height="29" Canvas.Left="114" Canvas.Top="113" Width="165"/>
+                    <PasswordBox Name="ConfirmPassword" Visibility="Collapsed" Background="White" Height="29" Canvas.Left="114" Canvas.Top="145" Width="165"/>
+                    <Button Name="LoginButton" Content="Ok" Click="LoginButton_OnClick" Canvas.Left="13" Canvas.Top="171" Width="75" Height="23"/>
+                    <CheckBox Name="CreateAccount" Content="Create account" Checked="CreateAccount_OnChecked" Unchecked="CreateAccount_OnUnchecked" Canvas.Left="15" Canvas.Top="4"/>
+                </Canvas>
+            </Expander>
+        </Canvas>
+        <Label Name="LoginLabel" Content="" HorizontalAlignment="Left" Margin="59,15,0,0" VerticalAlignment="Top" RenderTransformOrigin="1.1,0.577" Grid.Column="1"/>
     </Grid>
 </Window>
 
