--- a/PlantsWpf/MainWindow.xaml
+++ b/PlantsWpf/MainWindow.xaml
@@ -32,29 +32,30 @@
             </Grid>
         </ScrollViewer>
 
-        <Canvas Grid.Column="0" Panel.ZIndex="99" Margin="0,0,0,283">
-            <Expander Header="Log in before you start" Height="26" Canvas.Left="150" Canvas.Top="15" Width="275">
-                <Canvas Panel.ZIndex="99" Background="Wheat" Height="198" Margin="0,0,-27,0">
+        <Canvas Grid.Column="0" Panel.ZIndex="99" Margin="0,0,114,283">
+            <Expander Header="Log in before you start" Height="26" Canvas.Left="152" Canvas.Top="15" Width="156">
+                <Canvas Panel.ZIndex="99" Background="Wheat" Height="234" Margin="0,0,-151,0">
                     <Canvas.Effect>
                         <DropShadowEffect/>
                     </Canvas.Effect>
                     <Label Height="30" Canvas.Top="19" Content="FirstName" Canvas.Left="12"/>
                     <Label Height="30" Canvas.Top="52" Canvas.Left="11" Content="LastName" RenderTransformOrigin="0.8,0.433"/>
                     <Label Name="EmailLabel" Height="30" Canvas.Top="82" Canvas.Left="11" Visibility="Collapsed" Content="Email"/>
-                    <Label Height="30" Canvas.Top="112" Content="Password" RenderTransformOrigin="0.45,1.867" Canvas.Left="9"/>
+                    <Label Height="30" Canvas.Top="112" Content="Password" RenderTransformOrigin="0.45,1.867" Canvas.Left="11"/>
                     <Label Name="ConfirmPasswordLabel"  Height="30" Canvas.Top="145" Visibility="Collapsed" Content="Confirm Password" Canvas.Left="8"/>
                     <TextBox Name="FirstName" Text="Alex" Background="White" Height="29" Canvas.Left="114" Width="165" Canvas.Top="20"/>
                     <TextBox Name="LastName" Text="Gal" Background="White" Height="29" Canvas.Left="114" Canvas.Top="51" Width="165"/>
                     <TextBox Name="Email" Visibility="Collapsed" Background="White" Height="29" Canvas.Left="114" Canvas.Top="82" Width="165"/>
                     <PasswordBox Name="Password" Password="qYYfO8Di" Background="White" Height="29" Canvas.Left="114" Canvas.Top="113" Width="165"/>
                     <PasswordBox Name="ConfirmPassword" Visibility="Collapsed" Background="White" Height="29" Canvas.Left="114" Canvas.Top="145" Width="165"/>
-                    <Button Name="LoginButton" Content="Ok" Click="LoginButton_OnClick" Canvas.Left="5" Canvas.Top="169" Width="75" Height="23"/>
+                    <Button Name="LoginButton" Content="Ok" Click="LoginButton_OnClick" Canvas.Left="16" Canvas.Top="208" Width="75" Height="23"/>
                     <CheckBox Name="CreateAccount" Content="Create account" Checked="CreateAccount_OnChecked" Unchecked="CreateAccount_OnUnchecked" Canvas.Left="15" Canvas.Top="4"/>
-                    <Label Name="Logginglabel" Content="" Canvas.Left="86" Canvas.Top="166"/>
+                    <Label Name="Logginglabel" HorizontalAlignment="Left" HorizontalContentAlignment="Left" Content="" Canvas.Left="11" Canvas.Top="179" Width="291"/>
                 </Canvas>
             </Expander>
         </Canvas>
-        <Label Name="LoginNameLabel" Content="" HorizontalAlignment="Left" Margin="59,15,0,0" VerticalAlignment="Top" Grid.Column="1"/>
+        <Label Name="LoginNameLabel" HorizontalContentAlignment="Center" Content="" Margin="316,12,10,0" VerticalAlignment="Top" Grid.ColumnSpan="2"
+               Grid.Column="0"  HorizontalAlignment="Stretch" Width="Auto" />
     </Grid>
 </Window>
 
